--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "react-dom": "^17.0.2",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.4.2",
+        "react-toastify": "^9.0.8"
     }
 }
