--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "react-html-parser": "^2.0.2",
         "react-router-dom": "^6.4.2",
         "react-toastify": "^9.0.8"
     }
