--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "react-html-parser": "^2.0.2",
         "react-router-dom": "^6.4.2",
+        "react-say": "^2.1.0",
         "react-toastify": "^9.0.8"
     }
 }
